--- a/sources/Base.lproj/MainMenu.xib
+++ b/sources/Base.lproj/MainMenu.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="18122" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="21507" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="18122"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="21507"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -12,8 +12,9 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="noTunes" customModuleProvider="target">
+        <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="noTunez" customModuleProvider="target">
             <connections>
+                <outlet property="launchAtLoginMenuItem" destination="4qu-3S-x1Z" id="Hvz-X4-K4O"/>
                 <outlet property="statusMenu" destination="WAR-Dm-F96" id="90i-cz-uCW"/>
             </connections>
         </customObject>
@@ -24,6 +25,12 @@
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
                         <action selector="hideIconClicked:" target="Voe-Tx-rLC" id="Oux-kD-7eE"/>
+                    </connections>
+                </menuItem>
+                <menuItem title="Launch at Login" id="4qu-3S-x1Z">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                    <connections>
+                        <action selector="launchAtLogin:" target="Voe-Tx-rLC" id="r5x-eh-AoR"/>
                     </connections>
                 </menuItem>
                 <menuItem isSeparatorItem="YES" id="cqO-gs-dU5"/>
